fix: made the login and signin button large and more visible

--- a/frontend/src/assets/Components/Login/Login.css
+++ b/frontend/src/assets/Components/Login/Login.css
@@ -29,6 +29,9 @@ input {
     background-color: #111827;
     color: white;
     border-radius: 6px;
+    width: 100%;
+    padding: 15px;
+    border-radius: 15px;
 
   
 }
